tests/negative/vararg_old_syntax.urb
fn = (a, rest...){ println(a); };
